--- a/Guess_the_number_web/index.html
+++ b/Guess_the_number_web/index.html
@@ -1,4 +1,3 @@
-
 function getRandomInt(min, max) 
 {
     min = Math.ceil(min);
@@ -11,7 +10,7 @@ let maxNumber = 10;
 let randomNumber = getRandomInt(minNumber, maxNumber);
 let guessCount = 0;
 let maxGuess = 3;
-let guessButton = document.getElementById("guessButton")
+let guessButton = document.getElementById("guessButton");
 function guessChecker() 
 {
     let userGuess = document.getElementById("guess").value;
